# Mafia-Gangs

./: .gitignore  CMakeLists.txt
Mafia Gangs/: Mafia Gangs.sln
Mafia Gangs/Mafia Gangs/: Bullet.cpp  Bullet.h  Button.cpp  Button.h  CollisionMap.cpp  CollisionMap.h  Dialog.cpp  Dialog.h  Enemy.cpp  Enemy.h  FRect.cpp  Game.cpp  Game.h  GameManager.cpp  GameMode.cpp  GameMode.h  Gun.cpp  Gun.h  HUD.cpp  HUD.h  Loading.cpp  Loading.h  Mafia Gangs.vcxproj  Mafia Gangs.vcxproj.filters  Menu.cpp  Menu.h  MissionBase.h  MissionManager.cpp  MissionManager.h  MissionOne.cpp  MissionOne.h  Player.h  Rect.cpp  Rect.h  ScreenVisibility.h  Settings.cpp  Settings.h  Source.cpp  Text.cpp  Text.h  (+3 more)
Mafia Gangs/Mafia Gangs/x64/Debug/: Button.nativecodeanalysis.sarif  Button.nativecodeanalysis.xml  CodeAnalysisResultManifest.txt  CollisionMap.nativecodeanalysis.sarif  Dialog.nativecodeanalysis.sarif  Game.nativecodeanalysis.sarif  GameManager.nativecodeanalysis.sarif  HUD.nativecodeanalysis.sarif  Loading.nativecodeanalysis.sarif  Mafia Gangs.exe.recipe  Mafia Gangs.ilk  Menu.nativecodeanalysis.sarif  Rect.nativecodeanalysis.sarif  Rect.nativecodeanalysis.xml  Settings.nativecodeanalysis.sarif  Settings.nativecodeanalysis.xml  Source.nativecodeanalysis.sarif  Text.nativecodeanalysis.sarif  Window.nativecodeanalysis.sarif  Window.nativecodeanalysis.xml  gun.obj.enc  screenVisibility.nativecodeanalysis.sarif  vc.nativecodeanalysis.all.xml  vc143.idb
Mafia Gangs/Mafia Gangs/x64/Debug/Mafia Gangs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Mafia Gangs.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: Audio.h  Bullet.h  Button.h  CollisionMap.h  Dialog.h  Enemy.h  FRect.h  Game.h  GameManager.h  Gun.h  HUD.h  Loading.h  Menu.h  MissionManager.h  MissionOne.h  Player.h  Rect.h  ScreenVisibility.h  Window.h
src/: Audio.cpp  Button.cpp  Game.cpp  GameManager.cpp  GameMode.cpp  HUD.cpp  Loading.cpp  Menu.cpp  Rect.cpp  Source.cpp  Text.cpp  Window.cpp
